--- a/main.css
+++ b/main.css
@@ -1,204 +1,221 @@
-.grid-1 {
-    width: 100%;
+#index-body {
+    background-color: white;
+    background-image: url(https://www.retail-associates.com/wp-content/uploads/2016/10/website-login-background.jpg);
+
+}
+
+#index-container {
     display: grid;
-    grid-template-rows:  10% 90% 10%;
-    grid-template-columns: 480px 150px 160px 150px 150px;
-    border: 10px;
-    background-color: #141312;
-    align-items: center;
-    justify-items: center;
-    position: sticky;
-    top: 0px;
-    grid-gap: 15px;
-    margin-bottom: 10px;
-}
-
-a:hover {
-    background-color: black;
-    color: white;
-}
-
-a {
-    text-decoration: none;
-}
-
-.grid-item {
-    color: #ffffff;
-}
-
-#liner {
-    color: #141312;
-    grid-area: 3 / 1 / 4 / 8;
-    font-size: 20px;
-    font-weight: bold;
-    font-family: 'Source Sans Pro', sans-serif;
-    background-color: white;
     width: 100%;
-    height: 40px;
-    border: 0px double black;
-    margin-bottom: px;
+    grid-template-rows: 100px 100px 50px 50px 50px 50px 50px 50px;
+    grid-template-columns: repeat(10, 1fr);
+    grid-row-gap: 30px;
+    grid-column-gap: 30px;
 }
 
-#title {
-    grid-area: 2 / 1 / 3 / 2;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 52px;
-    text-decoration: none;
-    transition: all .5s ease-in-out;
-    text-shadow: 18px 18px 10px rgb(83, 83, 83);
+#inpix {
+    z-index: -1;
+    position: relative;
+    top: 100px;
 }
 
-#title:hover { transform: scale(1.2); }
-
-#nav1 {
-    grid-area: 2 / 2 / 3 / 3;
-    font-size: 22px;
-    font-weight: bold;
-    text-transform: uppercase;
-    text-decoration: none;
-    border: 2px ridge white;
-    padding: 5px;
-    transition: all .5s ease-in-out;
+#b0 {
+    height: 5px;
+    margin: 0px;
+    text-align: center;
 }
 
-#nav2 {
-    grid-area: 2 / 3 / 3 / 4;
-    font-size: 22px;
-    font-weight: bold;
-    text-transform: uppercase;
-    text-decoration: none;
-    border: 2px ridge white;
-    padding: 5px
-}
-
-#nav3 {
-    grid-area: 2 / 4 / 3 / 5;
-    font-weight: bold;
-    text-transform: uppercase;
-    font-size: 22px;
-    text-decoration: none;
-    border: 2px ridge white;
-    padding: 5px
-}
-
-#nav1:hover{
-    background-color: white;
-    color: black;
-}
-
-#nav2:hover{
-    background-color: white;
-    color: black;
-}
-
-#nav3:hover{
-    background-color: white;
-    color: black;
-}
-
-#foot {
-    height: 70px;
-    width: 100%;
+#b1{
+    grid-column: 5 / span 2;
+    grid-row: 2 / 3;
+    width: auto;
+    padding: auto;
+    align-self: center;
+    justify-self: center;
+    font-family: Questrial, Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bolder;
+    font-size: 50px;
     color: white;
-    position: fixed;
-    bottom: 0px;
-    left: -5px;
-    display: grid;
-    padding: 5px 20px 25px 20px;
-    grid-template-rows: 30px repeat(3,20px);
-    grid-template-columns: 30% 30% 20% 20%;
-    background-image: url(https://media.giphy.com/media/7Xxzkbe5TpAHlrK18h/giphy.gif);
-    background-size: 100% 100%;
-    font-family: 'Source Sans Pro', sans-serif;
+    transition: 0.5s;
+    transition-timing-function: ease-in-out;
 }
 
-.gi1 {
-    grid-area: 1 / 1 / 2 / 2;
-    font-size: 20px;
-    font-weight: bold;
-    letter-spacing: 2px
+#b1:hover {
+    color: #121923;
+    font-size: 35px;
+    padding-top: 72.7px;
 }
 
-.gi2 {
-    grid-area: 2 / 1 / 3 / 2;
-    letter-spacing: 1px
+/*  1 =     */
+
+#b2{
+    grid-row: 4 / 6;
+    grid-column: 3 / 6;
 }
 
-.gi3 {
-    grid-area: 3 / 1 / 4 / 2;
-    letter-spacing: 1px
+#b3{
+    grid-row: 4 / 6;
+    grid-column: 6 / 9;
 }
 
-.gi4 {
-    grid-area: 4 / 1 / 5 / 2;
-    letter-spacing: 1.2px
+#b4{
+    grid-row: 6 / 8;
+    grid-column: 3 / 6;
 }
 
-.gi5 {
-    grid-area: 1 / 3 / 3 / 4 ;
-    justify-self: end;
-    letter-spacing: 1px
+#b5{
+    grid-row: 6 / 8;
+    grid-column: 6 / 9;
 }
 
-.gi6 {
-    grid-area: 1 / 4 / 2 / 5;
-    justify-content: start;
-    letter-spacing: 1px
+.nav {
+    transition: 0.3s;
+    transition-timing-function: ease-in-out;
+    font-family: Questrial, Calibri, 'Trebuchet MS', sans-serif;
+    text-align: center;
+    color: white;
+    border: 1px white solid;
+    padding: 30px 30px 30px 30px;
+    border-radius: 2%;
+    font-size: 50px;
+
 }
+
+@media only screen and (max-width: 600px) {
+    html {
+        max-width: 100%;
+    }
+
+}
+
+@media screen and (min-width: 670px) {
+    .nav {
+      font-size: 40px;
+    }
+  }
+  
+  /* If the screen size is 600px wide or less, set the font-size of <div> to 30px */
+  @media screen and (max-width: 750px) {
+    .nav {
+      font-size: 20px;
+      padding: 45px 30px 30px 30px;
+    }
+  }
+
+/*     align-self: center;
+    justify-self: center; */
+
+.nav:hover {
+    background-color: #121923;
+}
+
+#indfoot {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    padding: 1rem;
+    text-align: center;
+}
+
+
+
+
+/* SOCIAL MEDIA */
+
+@import url(https://fonts.googleapis.com/css?family=Lato);
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
 
 body {
-    background-image: url("http://carrickonsuirancestry.com/gallery/background-for-website.jpg");
-    background-attachment: fixed;
-    background-position: center;
-    font-family: 'Source Sans Pro', sans-serif;
+    font-family: 'Lato', sans-serif;
+    color: #FFF;
+    background: #322f30;
+    -webkit-font-smoothing: antialiased;
+}
+a {
+    text-decoration: none;
+    color: #fff;
+}
+p > a:hover{
+    color: #d9d9d9;
+    text-decoration:  underline;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    margin:  1% 0 1% 0;
+}
+._12 {
+    font-size: 1.2em;
+}
+._14 {
+    font-size: 1.2em;
+    font-family: Questrial, Calibri, 'Trebuchet MS', sans-serif;
+}
+ul {
+    padding:0;
+    list-style: none;
+}
+.footer-social-icons {
+    width: 350px;
+    display:block;
+    margin: 0 auto;
+}
+.social-icon {
+    color: #fff;
+}
+ul.social-icons {
+    margin-top: 10px;
+}
+.social-icons li {
+    vertical-align: top;
+    display: inline;
+    height: 100px;
+}
+.social-icons a {
+    color: #fff;
+    text-decoration: none;
+}
+.fa-facebook {
+    padding:13px 17px;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+    background-color: #322f30;
+}
+.fa-facebook:hover {
+    background-color: #3d5b99;
+    border-radius: 40%;
 }
 
-.twi1 {
-    display: inline-block;
+.fa-linkedin {
+    padding:13px 16px;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+    background-color: #322f30;
 }
-
-.twi2 {
-    float: left;
-    margin-left: 0.5px;
-    display: block;
+.fa-linkedin:hover {
+    background-color: #0073a4;
+    border-radius: 40%;
 }
-
-.wwgrid {
-    display: grid;
-    width: 28%;
-    float: right;
-    position: relative;
-    right: px;
-    grid-gap: 20px;
-
-
-
+.fa-google-plus {
+    padding:13px 12px;
+    -o-transition:.5s;
+    -ms-transition:.5s;
+    -moz-transition:.5s;
+    -webkit-transition:.5s;
+    transition: .5s;
+    background-color: #322f30;
 }
-
-.wwl {
-    color: #141312;
-    font-size: 20px;
-    font-weight: bold;
-    
-}
-
-.ww1 {
-    border: 1px solid #141312;
-    text-align: center;
-    padding: 5px 10px 5px 10px
-}
-
-iframe {
-    min-width: 70%;
-    max-width: none;
-}
-
-.ifr {
-    border: 1px solid #141312;
-}
-
-.ww1:hover {
-    background-color: black;
-    color: white;
+.fa-google-plus:hover {
+    background-color: #e25714;
+    border-radius: 40%;
 }
