--- a/CSS/p2.css
+++ b/CSS/p2.css
@@ -22,24 +22,34 @@ html, body {
     left: 0;
     margin: auto;
     z-index: 1;
-    opacity: 0.8;
+    opacity: 0.70;
     min-width: 700px;
 }
 
 #vgi {
     z-index: 1;
-    Margin: 10px 10px 10px 25px;
+    Margin: 10px 10px 00px 25px;
     font-family: 'Merriweather', 'Calibri', 'Gill Sans';
     color: white;
     text-align: center;
     font-size: 25px;
 }
 
+#vgi h1 {
+    text-shadow: 0px -30px 50px white;
+    transition: 1s ease-in-out;
+}
+
+#vgi h1:hover {
+    text-shadow: 0px 0px 100px black;
+    transition: 1s ease-in-out;
+}
+
 iframe {
     margin-right: 60px;
     display: block;
     background-color: white;
-    opacity: 1!important;
+    opacity: 1 !important;
 }
 
 .navbar {
@@ -55,19 +65,17 @@ iframe {
     display: block;
     color: #f2f2f2;
     text-align: center;
-    padding: 10px 10px;
+    padding: 7px 10px;
     text-decoration: none;
     font-size: 14px;
+    transition: 0.5s ease-in-out;
 }
 
 .navbar a:hover {
     background-color: #ddd;
     color: black;
-}
-
-.navbar a.active {
-    background-color: #4CAF50;
-    color: white;
+    transition: 0.5s ease-in-out;
+    border: 0.1px solid white;
 }
 
 
