--- a/CSS/p2cv.css
+++ b/CSS/p2cv.css
@@ -6,6 +6,11 @@ body {
     font-size: 25px;
     text-align: center;
     text-decoration: underline;
+    margin-bottom: -15px;
+}
+
+#ch1 {
+    
 }
 
 #ch2 {
@@ -16,5 +21,21 @@ body {
 }
 
 .th {
-    
+    padding-left: 10px;
+}
+
+.logos {
+    margin-left: 10px;
+}
+
+.invis {
+    font-size: 1px;
+}
+
+#tbl {
+    border-left: 1.3px solid gray;
+}
+
+#tbr {
+    border-right: 1.3px solid gray;
 }
