--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1,6 +1,6 @@
 #index-body {
     background-color: white;
-    background-image: url(https://www.retail-associates.com/wp-content/uploads/2016/10/website-login-background.jpg);
+    background-image: url("/image/website-login-background.jpg");
 
 }
 
