--- a/main.css
+++ b/main.css
@@ -18,7 +18,7 @@
 #index-container {
     display: grid;
     width: 100%;
-    grid-template-rows: 140px 200px 100px repeat(9, 100px);
+    grid-template-rows: 140px 220px 100px repeat(9, 100px);
     grid-template-columns: repeat(8, 1fr);
     grid-row-gap: 30px;
     grid-column-gap: 30px;
@@ -44,7 +44,7 @@
     align-self: center;
     justify-self: center;
     font-family: 'Ubuntu', Questrial, Calibri, sans-serif;
-    font-weight: bolder;
+    font-weight: bold;
     font-size: 40px;
     color: white;
     transition: 0.3s;
@@ -62,7 +62,7 @@
     align-self: center;
     justify-self: center;
     font-family: 'Ubuntu', Questrial, Calibri, sans-serif;
-    font-weight: bolder;
+    font-weight: bold;
     font-size: 54px;
     color: white;
     transition: 0.3s;
@@ -81,7 +81,7 @@
     text-shadow: 0px 3px 50px white;
 }
 
-#b1 h4 {
+#b1 h2 {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -94,7 +94,7 @@
     text-shadow: 0px 3px 50px white;
 }
 
-#b2, #b3, #b4, #b5, #b6, #b7, .dropdown, .dropdown-content { grid-column: 3 / 7; }
+#b2, #b3, #b4, #b5, #b6, #b7, .dropdown, .dropdown-content { grid-column: 2 / 8; }
 #b2 {  grid-row: 3  /  4; }
 #b3 {  grid-row: 4  /  5; }
 #b4 {  grid-row: 5  /  6; }
@@ -151,35 +151,16 @@
     border-style: hidden;
 }
 
-@media screen and (max-width: 1200px) {
-    #b2, #b3, #b4, #b5, #b6, #b7, .dropdown {
-        grid-column: 3 / 7;
-        font-size: 30px;
-    } }
-
-@media screen and (max-width: 850px) {
-    #b2, #b3, #b4, #b5, #b6, #b7, .dropdown  {
-        grid-column: 2 / 8;
-        font-size: 30px;
-    } }
-
-@media screen and (max-width: 500px) {
-    #b2, #b3, #b4, #b5, #b6, #b7, .dropdown  {
-        grid-column: 1 / 9;
-        font-size: 30px;
-    } }
-
-@media screen and (max-width: 440px) {
-    #b1   { font-size: 35px; }
-    #b001 { font-size: 40px; } }
-
-@media screen and (max-width: 385px) {
-    #b2, #b3, #b4, #b5, #b6, #b7, .dropdown, .dropbtn, .dropdwnOpt { font-size: 25px; }
-    #boo1, #b1 { font-size: 30px; } }
-
-    @media screen and (max-width: 305px) {
-        #b2, #b3, #b4, #b5, #b6, #b7, .dropdown, .dropbtn, .dropdwnOpt { font-size: 20px; }
-        }
+@media screen and (max-width: 1200px) { #b2, #b3, #b4, #b5, #b6, #b7, .dropdown, .dropbtn, .dropdwnOpt { font-size: 30px; } }
+@media screen and (max-width: 850px) { #b2, #b3, #b4, #b5, #b6, #b7, .dropdown, .dropbtn, .dropdwnOpt  { font-size: 30px; }
+                                       #b1 { font-size: 25px; } }
+@media screen and (max-width: 500px) { #b2, #b3, #b4, #b5, #b6, #b7, .dropdown, .dropbtn, .dropdwnOpt  { font-size: 25px; }
+                                       #b1 { grid-column: 2 / span 6; } }
+@media screen and (max-width: 440px) { #b2, #b3, #b4, #b5, #b6, #b7, .dropdown, .dropbtn, .dropdwnOpt  { font-size: 20px; }
+                                       #b001 { font-size: 40px; } }
+@media screen and (max-width: 385px) { #b2, #b3, #b4, #b5, #b6, #b7, .dropdown, .dropbtn, .dropdwnOpt { font-size: 16px; }
+                                       #boo1, #b1                                                     { font-size: 20px; } }
+@media screen and (max-width: 315px) { #b2, #b3, #b4, #b5, #b6, #b7, .dropdown, .dropbtn, .dropdwnOpt { font-size: 13px; } }
 
 /* SOCIAL MEDIA */
 
@@ -309,7 +290,7 @@ ul.social-icons {
   
 .dropdwnOpt {
     text-align: center;
-    font-size: 24px;
+    font-size: 20px;
 }
   .dropdown-content a {
     display: block;
